[gd_scene load_steps=25 format=3 uid="uid://dli31gu1uc6eh"]

[ext_resource type="Script" path="res://Mobs/skeleton.gd" id="1_im054"]
[ext_resource type="Texture2D" uid="uid://ddacr30qtof7d" path="res://Art/Monsters_Creatures_Fantasy/Skeleton/Take Hit.png" id="2_2030d"]
[ext_resource type="Texture2D" uid="uid://bwxmckoquwb3p" path="res://Art/Monsters_Creatures_Fantasy/Skeleton/Idle.png" id="2_frqse"]
[ext_resource type="Texture2D" uid="uid://bqvhqwqtxdeiq" path="res://Art/Monsters_Creatures_Fantasy/Skeleton/Death.png" id="3_chu45"]
[ext_resource type="Texture2D" uid="uid://bj0heixno0t01" path="res://Art/Monsters_Creatures_Fantasy/Skeleton/Walk.png" id="5_e6dfs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s51ni"]
height = 34.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ygsp4"]
atlas = ExtResource("2_2030d")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtwom"]
atlas = ExtResource("2_2030d")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5t5c"]
atlas = ExtResource("2_2030d")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqp2f"]
atlas = ExtResource("3_chu45")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_p67qo"]
atlas = ExtResource("3_chu45")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxbq1"]
atlas = ExtResource("3_chu45")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bv03"]
atlas = ExtResource("2_frqse")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrae4"]
atlas = ExtResource("2_frqse")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3es2s"]
atlas = ExtResource("2_frqse")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p3ph"]
atlas = ExtResource("2_frqse")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7c144"]
atlas = ExtResource("5_e6dfs")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkryg"]
atlas = ExtResource("5_e6dfs")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_smiaw"]
atlas = ExtResource("5_e6dfs")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjgi6"]
atlas = ExtResource("5_e6dfs")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_la0hj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygsp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtwom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5t5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqp2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p67qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxbq1")
}],
"loop": false,
"name": &"Death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bv03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrae4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3es2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p3ph")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c144")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkryg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smiaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjgi6")
}],
"loop": true,
"name": &"Run",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_g3ps5"]
radius = 192.315

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0e8g"]
size = Vector2(24, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78vsu"]
size = Vector2(13, 5)

[node name="Skeleton" type="CharacterBody2D"]
script = ExtResource("1_im054")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_s51ni")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -1)
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_la0hj")
animation = &"Run"
autoplay = "Idle"
frame_progress = 0.994884

[node name="Detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
visible = false
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_g3ps5")

[node name="Hit Enemy Box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit Enemy Box"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_r0e8g")

[node name="Death Box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death Box"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_78vsu")

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="Hit Enemy Box" to="." method="_on_hit_enemy_box_body_entered"]
[connection signal="body_entered" from="Death Box" to="." method="_on_death_box_body_entered"]
